Fix question overflow and spacing

--- a/src/global.scss
+++ b/src/global.scss
@@ -91,7 +91,7 @@ video {
 
 
 // Reader
-.reader .page-content, .about-content-wrapper, .preview-settings, .transcript{
+.reader .page-content, .about-content-wrapper, .preview-settings, .transcript, .explanation-text{
   color: $inria-blue;
 
   video{
